manifests/wholefoodsfrugality-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wholefoodsfrugality
---
apiVersion: v1
kind: Service
metadata:
  name: wholefoodsfrugality
  namespace: wholefoodsfrugality
  labels:
    app: wholefoodsfrugality
spec: 
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: wholefoodsfrugality
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wholefoodsfrugality
  namespace: wholefoodsfrugality
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wholefoodsfrugality
  template:
    metadata:
      labels:
        app: wholefoodsfrugality
    spec:
      containers:
      - name: wholefoodsfrugality
        image: harbor.tanzu.bekind.io/demoapps/wholefoodsfrugality:0.3
        ports:
        - containerPort: 8080
